--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.8.3",
     "d3": "^7.8.0",
     "d3-geo-projection": "^4.0.0",
+    "jspdf": "^3.0.3",
     "pinia": "^2.1.0",
     "proj4": "^2.17.0",
     "sortablejs": "^1.15.6",
