--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pinia": "^2.1.0",
     "proj4": "^2.17.0",
     "sortablejs": "^1.15.6",
+    "svg2pdf.js": "^2.6.0",
     "vue": "^3.2.13",
     "vue-router": "^4.5.1",
     "xlsx": "^0.18.5"
