--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "d3": "^7.8.0",
     "d3-geo-projection": "^4.0.0",
     "jspdf": "^3.0.3",
+    "pdf-lib": "^1.17.1",
     "pinia": "^2.1.0",
     "proj4": "^2.17.0",
     "sortablejs": "^1.15.6",
